--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,23 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.traffic-light{
+    display: inline-block;
+    padding: 10px;
+    background-color: black;
+    margin: auto;
+}
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.red{
+    background-color: red;
+}
+.yellow{
+    background-color: yellow;
+}
+.green{
+    background-color: green;
+}
+.glow{
+    box-shadow: 0px 0px 9px 4px #09edf5;
+}
