--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,27 @@
+.container{
+    margin-left: 50%;
+    display: flex;
+}
 .traffic-light{
     padding: 10px;
     background-color: black;
-    margin-left: 100px;
-    margin-top: 50px;
     display: inline-block;
     border-radius: 15px;
+}
+.cable{
+    background-color: rgb(8, 194, 182);
+    width: 50px;
+    height: 300px;
+    border-radius: 20px;
+    border: solid 5px #111;
+    align-items: center;
+    z-index: -1;
 }
 .light{
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    margin: 5px;
 }
 .red{
     background-color: red;
@@ -20,6 +32,12 @@
 .green{
     background-color: green;
 }
-.glow{
-    box-shadow: 0px 0px 9px 4px #fcfdbe;
+.glowRed{
+    box-shadow: 0px 0px 9px 9px #ff6565;
+}
+.glowYellow{
+    box-shadow: 0px 0px 9px 9px #e9f89f;
+}
+.glowGreen{
+    box-shadow: 0px 0px 9px 9px #00ff33;
 }
