--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
     background-color: black;
     display: inline-block;
     border-radius: 15px;
+    margin-top: 100px;
 }
 .cable{
     background-color: rgb(8, 194, 182);
@@ -14,7 +15,6 @@
     height: 300px;
     border-radius: 20px;
     border: solid 5px #111;
-    align-items: center;
     z-index: -1;
 }
 .light{
