--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,21 +1,21 @@
-.container{
-    margin-left: 50%;
-    display: flex;
-}
 .traffic-light{
     padding: 10px;
     background-color: black;
     display: inline-block;
     border-radius: 15px;
-    margin-top: 100px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 50%;
 }
 .cable{
-    background-color: rgb(8, 194, 182);
-    width: 50px;
-    height: 300px;
+    background-color: rgb(0, 0, 0);
+    width: 30px;
+    height: 670px;
     border-radius: 20px;
-    border: solid 5px #111;
-    z-index: -1;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .light{
     width: 100px;
